--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                         <option value="patiala">patiala</option>
                         <option value="amritsar">amritsar</option>
                     </select><br><br>
+                    <input type="radio" name="gender" value="Male" class="gender" ><p class="gender">Male</p><br><br>
+                    <input type="radio" name="gender" value="Female"class="gender"><p class="gender">Female</p><br><br>
                     <input type="submit" class="inputs" id = "submit-button">
             </form>
         </div><br><br><br>
@@ -47,4 +49,3 @@
         </div>
 </body>
 </html>
-
