--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </select><br><br>
                 <div id = "gender-div">
                     <label>
-                    <input type="radio" name="gender" value="Male" class="gender" ><p class="gender">Male</p><br><br>
+                    <input type="radio" name="gender" value="Male" class="gender"  id = "male"><p class="gender">Male</p><br><br>
                     </label>
                     <label>
                     <input type="radio" name="gender" value="Female"class="gender"><p class="gender">Female</p><br><br>
@@ -57,6 +57,7 @@
         </div>
 </body>
 </html>
+
 
 
 
