--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <option value="amritsar">amritsar</option>
                     </select><br><br>
                 <div id = "gender-div">
-                    <div>
+                    <div id ="gender-div2">
                     <label>
                     <input type="radio" name="gender" value="Male" class="gender" ><p class="gender" id = "male">Male</p><br><br>
                     </label>
@@ -59,6 +59,7 @@
         </div>
 </body>
 </html>
+
 
 
 
