--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                   <h2>Registeration Form</h2><br>
                   <input type="text" name="full-name" class = "inputs" placeholder="Enter Full name" required><br><br>
                     <input type="text" placeholder="Enter your username" name="username" id = "username" class ="inputs" required title="*username"><br><br>
-                    <input type="tel" placeholder="Enter mobile number" name="number" id = "number" class="inputs" required><br><br>
+                    <input type="tel" pattern="[0-9] placeholder="Enter mobile number" name="number" id = "number" class="inputs" required><br><br>
                     <input type = "email" placeholder="Enter your email" name="email" id = "email" class="inputs" pattern=".*@.*com" required title="*email"><br><br>
                     <select class="inputs" id ="city" name = "city">
                         <option value="ferozepur">Ferozepur</option>
@@ -59,6 +59,7 @@
         </div>
 </body>
 </html>
+
 
 
 
