--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </label>
                     </div>
                 </div>
-                <textarea  placeholder="Enter your hobby here" name="textarea"></textarea><br>
+                <textarea id ="hobby" placeholder="Enter your hobby here" name="textarea"></textarea><br>
                     <input type="submit" class="inputs" id = "submit-button">
             </form>
         </div><br><br><br>
@@ -74,6 +74,7 @@
         </div>
 </body>
 </html>
+
 
 
 
