--- a/index.html
+++ b/index.html
@@ -55,26 +55,29 @@
 
         <div id = "footer">
             <footer>
+                <div>
+                    <img id = "credit" src= "Credit.jpg">
+                </div>
                 <p class ="footer">
                     @no copyright-This site is for educational purposes(Wiztech 2025-2026). 
-                </p>
+                </p><br>
                 <p class ="footer">
                     This site will be unpublished before 10 december 2025(after a week of competion)
-                </p>
+                </p><br>
                 <p class ="footer">
                     @By Nesar Dhawan
-                </p>
+                </p><br>
                 <p class ="footer">
                     Class-7 Aster
-                </p>
+                </p><br>
                 <p class ="footer">
                     School Name:Dass and Brown World School,on border road,fzr,punj
-                </p>
-                <img id = "credit" src= "Credit.jpg">
+                </p><br>
             </footer>
         </div>
 </body>
 </html>
+
 
 
 
