--- a/index.html
+++ b/index.html
@@ -58,25 +58,28 @@
                 <div id="credit-div">
                     <img id = "credit" src= "Credit.jpg">
                 </div>
-                <p class ="footer">
-                    @no copyright-This site is for educational purposes(Wiztech 2025-2026). 
-                </p><br>
-                <p class ="footer">
-                    This site will be unpublished before 10 december 2025(after a week of competion)
-                </p><br>
-                <p class ="footer">
-                    @By Nesar Dhawan
-                </p><br>
-                <p class ="footer">
-                    Class-7 Aster
-                </p><br>
-                <p class ="footer">
-                    School Name:Dass and Brown World School,on border road,fzr,punj
-                </p><br>
+                <div id="right-sided-div">
+                    <p class ="footer">
+                        @no copyright-This site is for educational purposes(Wiztech 2025-2026). 
+                    </p><br>
+                    <p class ="footer">
+                        This site will be unpublished before 10 december 2025(after a week of competion)
+                    </p><br>
+                    <p class ="footer">
+                        @By Nesar Dhawan
+                    </p><br>
+                    <p class ="footer">
+                        Class-7 Aster
+                    </p><br>
+                    <p class ="footer">
+                        School Name:Dass and Brown World School,on border road,fzr,punj
+                    </p><br>
+                </div>
             </footer>
         </div>
 </body>
 </html>
+
 
 
 
