--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 
         <div id = "footer">
             <footer>
+                <div id ="c-d">
                     <img id = "credit" src= "Credit.jpg">
+                    </div>
+                <div id ="i-d">
                     <p class ="footer">
                         @no copyright-This site is for educational purposes(Wiztech 2025-2026). 
                     </p><br>
@@ -71,11 +74,12 @@
                     <p class ="footer">
                         School Name:Dass and Brown World School,on border road,fzr,punj
                     </p><br>
-                
+                </div>
             </footer>
         </div>
 </body>
 </html>
+
 
 
 
