--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id = "navbar">
-        <a href = "#"><img src="logo.png" class = "links" id = "logo" height="40px" ></a>
+        <a href = "#"><img src="logo.png" id = "logo" height="40px" ></a>
         <div id = "right-sided-navbar">
         <a href ="#" class = links>Home</a>
         <a href ="#" class = links>Download</a>
@@ -79,6 +79,7 @@
         </div>
 </body>
 </html>
+
 
 
 
