--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </video>
     <div id = "navbar">
         <a href = "#"><img src="logo.png" id = "logo" height="40px" ></a>
+        <h2 id ="heading">WIZ-5</h2>
         <div id = "right-sided-navbar">
         <a href ="#" class = links>Home</a>
         <a href ="#" class = links>Download</a>
@@ -82,6 +83,7 @@
         </div>
 </body>
 </html>
+
 
 
 
