--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </video>
     <div id = "navbar">
         <a href = "#"><img src="logo.png" id = "logo" height="40px" ></a>
-        <h2 id ="headings">WIZ-5</h2>
+        <h3 class ="headings">WIZ-5</h3>
         <div id = "right-sided-navbar">
         <a href ="#" class = links>Home</a>
         <a href ="#" class = links>Download</a>
@@ -25,12 +25,12 @@
             <form id = "form" action="https://api.web3forms.com/submit" method="POST">
                   <input type="hidden" name="access_key" value="3084628c-fdfc-4465-9120-038c86e72a5a">
             <br><br><br>
-                  <h2 id = "headings">Sign up</h2><br>
+                  <h2 class = "headings">Sign up</h2><br>
                   <input type="text" name="full-name" class = "inputs" placeholder="Enter Full name" required><br><br>
                     <input type="text" placeholder="Enter your username" name="username" id = "username" class ="inputs" required title="*username"><br><br>
                     <input type="tel" placeholder="Enter mobile number" name="number" id = "number" class="inputs" required><br><br>
                     <input type = "email" placeholder="Enter your email" name="email" id = "email" class="inputs" pattern=".*@.*" required title="*email"><br><br>
-                    <h4 id="headings">City</h4><br>
+                    <h4 class="headings">City</h4><br>
                     <select class="inputs" id ="city" name = "city">
                         <option value="ferozepur">Ferozepur</option>
                         <option value="ludhiana">Ludhiana</option>
@@ -40,7 +40,7 @@
                         <option value="patiala">patiala</option>
                         <option value="amritsar">amritsar</option>
                     </select><br><br>
-                <h4 id="headings">Gender</h4><br>
+                <h4 class="headings">Gender</h4><br>
                 <div id = "gender-div">
                     <div id ="gender-div2">
                     <label>
@@ -83,6 +83,7 @@
         </div>
 </body>
 </html>
+
 
 
 
