--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <video autoplay muted loop id="myVideo">
-          <source src="medium-vecteezy_a-dark-background-with-stars-and-snow_68109540_medium.mp4" type="video/mp4">
+          <source src="medium-vecteezy_a-magnificent-spiral-galaxy-drifting-through-the-vastness-of_52454709_medium (1).mp4" type="video/mp4">
     </video>
     <div id = "navbar">
         <a href = "#"><img src="logo.png" id = "logo" height="40px" ></a>
@@ -83,6 +83,7 @@
         </div>
 </body>
 </html>
+
 
 
 
