--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id = "navbar">
         <a href = "#"><img src="logo.png" id = "logo" height="40px" ></a>
-        <h3 class ="headings">WIZ-5</h3>
+        <h3 class ="headings" id = "main-head">WIZ-5</h3>
         <div id = "right-sided-navbar">
         <a href ="#" class = links>Home</a>
         <a href ="#" class = links>Download</a>
@@ -80,4 +80,5 @@
         </div>
 </body>
 </html>
+
 
