--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FORM</title>
+    <title><img src = "logo.png">Wiztech 2025 | AI Registration Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -80,6 +80,7 @@
         </div>
 </body>
 </html>
+
 
 
 
