--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id = "navbar">
         <a href = "#"><img src="logo.png" id = "logo" height="40px" ></a>
-        <h2 id = "main-head">WIZ-5</h2>
+        <h2 id = "main-head">Wiztech 2025 | AI Registration Form</h2>
         <div id = "right-sided-navbar">
         <a href ="#" class = links>Home</a>
         <a href ="#" class = links>Download</a>
@@ -81,6 +81,7 @@
         </div>
 </body>
 </html>
+
 
 
 
