--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <br><br><br>
                   <h2 class = "headings">Job application form</h2><br>
                 <h3 class="headings">Personal information</h3>
-                  <input type="text" name="full-name" class = "inputs" placeholder="Enter Full name" required><br><br>
-                    <input type="text" placeholder="Enter your username" name="username" id = "username" class ="inputs" required title="*username"><br><br>
-                    <input type="tel" placeholder="Enter mobile number" name="number" id = "number" class="inputs" required><br><br>
-                    <input type = "email" placeholder="Enter your email" name="email" id = "email" class="inputs" pattern=".*@.*" required title="*email"><br><br>
+                  <input type="text" name="First-name" class = "inputs" placeholder="Enter First name" required><br><br>
+                    <input type="text" placeholder="Enter your Last name" name="Last-name" id = "last-name" class ="inputs" required ><br><br>
+                    <input type="tel" inputmode="numeric" maxlength="10"placeholder="Enter mobile number" name="number" id = "number" class="inputs" required><br><br>
+                    <input type = "email" placeholder="Enter your email" name="email" id = "email" class="inputs" pattern=".*@.*" required><br><br>
                     <h4 class="headings">City</h4><br>
                     <select class="inputs" id ="city" name = "city">
                         <option value="ferozepur">Ferozepur</option>
@@ -82,6 +82,7 @@
         </div>
 </body>
 </html>
+
 
 
 
