--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                   <option value="doctoral-degree">Doctoral Degree (Ph.D., M.Phil.)</option>
                   <option value="professional-certification">Professional Certification (e.g., CA, CS, etc.)</option>
                   <option value="other">Other</option>
-                </select>
+                </select><br><br>
+                <h4 class = headings>Talent</h4>
                 <textarea id ="talent" placeholder="Enter your talent here(any eg:coding,reason we should hire you)" name="textarea"></textarea><br>
                     <input type="submit" class="inputs" id = "submit-button">
                 </form>
@@ -99,5 +100,6 @@
         </div>
 </body>
 </html>
+
 
 
