--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <option value="ux-designer-ai">UX Designer (AI applications)</option>
                         <option value="sales-ai-solutions">Sales (AI Solutions)</option>
                         <option value="marketing-ai-solutions">Marketing (AI Solutions)</option>
-                    </select>
+                    </select><br><br><br>
                 <h4 class= "headings">Expected salary(In range)</h4>
                     <div id="salary-div">
                     
@@ -114,7 +114,7 @@
                             5–7 Lakh
                         </label>
                     
-                    </div>
+                    </div><br><br>
 
                 <h4 class = headings>Talent</h4>
                     <textarea id ="talent" placeholder="Enter your talent here(any eg:coding,reason we should hire you)" name="textarea"></textarea><br>
@@ -149,6 +149,7 @@
         </div>
 </body>
 </html>
+
 
 
 
