--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="https://dbs-nesar.github.io/AI-register-form/logo.png">
+    <meta property ="og:description" content="WIZ-5: A Journey to the Future of AI and Technology">
     <title>Wiztech 2025 | AI Registration Form</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="icon.png" id = "icon">
@@ -295,6 +296,7 @@
         </div>
 </body>
 </html>
+
 
 
 
