--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta property ="og:description" content="WIZ-5: A Journey to the Future of AI and Technology">
     <title>Wiztech 2025 | AI Registration Form</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="icon.png" id = "icon">
+    <link rel="icon" type="image/png" href="logo.png" id = "icon">
 </head>
 <body>
     <div id = "navbar">
-        <a href = "#"><img src="icon.png" id = "logo" height="40px" ></a>
+        <a href = "#"><img src="logo.png" id = "logo" height="40px" ></a>
         <h2 id = "main-head">Wiztech 2025 | AI Registration Form</h2>
         <div id = "right-sided-navbar">
         <a href ="#" class = links>Home</a>
@@ -328,6 +328,7 @@
         </div>
 </body>
 </html>
+
 
 
 
