--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Wiztech 2025 | AI Registration Form">
+    <meta property="og:description" content="WIZ-5 | A Journey to the Future of AI and Technology">
     <meta property="og:image" content="https://dbs-nesar.github.io/AI-register-form/logo.png">
-    <meta property ="og:description" content="WIZ-5 | A Journey to the Future of AI and Technology">
+    <meta property="og:url" content="https://dbs-nesar.github.io/AI-register-form/">
+    <meta property="og:type" content="website">
     <title>Wiztech 2025 | AI Registration Form</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="logo.png" id = "icon">
@@ -328,6 +331,7 @@
         </div>
 </body>
 </html>
+
 
 
 
