--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
         <a href = "#"><img src="logo.png" id = "logo" height="40px" ></a>
         <h2 id = "main-head">Wiztech 2025 | AI Registration Form</h2>
         <div id = "right-sided-navbar">
-        <a href ="#" class = links>Home</a>
-        <a href ="#" class = links>Download</a>
-        <a href ="#" class = links>Dashboard</a>
-        <a href ="#" class = links>Applying</a>
+        <a href ="dashboard.html" class = links>Dashboard</a>
+        <a href ="index.html" class = links>Applying</a>
         </div>
     </div>
     <div id = "total-spaced-form">
@@ -357,6 +355,8 @@
                 </div>
             </footer>
         </div>
+        <script src="script.js">
+
+        </script>
 </body>
 </html>
-
