--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
 <div id="menu">
     <button id="menu-btn">☰ Menu</button>
     <div id="dropdown">
-        <a href="dashboard.html">Dashboard</a>
+        <div class="sub-drop">
+    <a class="main-link" href="dashboard.html">Dashboard ▾</a>
+    <div class="sub-options">
+        <a href="about-wiztech.html">About Wiztech</a>
+        <a href="about-company.html">About Company</a>
+    </div>
+</div>
+
         <a href="index.html">Applying</a>
     </div>
 </div>
@@ -364,4 +371,5 @@
         </script>
 </body>
 </html>
+
 
