--- a/about-wiztech.html
+++ b/about-wiztech.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,15 +20,16 @@
         <div id="menu">
             <button id="menu-btn">☰ Menu</button>
             <div id="dropdown">
+                <a href="index.html">Applying</a>
                 <div class="sub-drop">
-                <a class="main-link" href="dashboard.html">Dashboard ▾</a>
+                <a class="main-link" href="About.html">About ▾</a>
                     <div class="sub-options">
                     <a href="dashboard.html">About Wiztech</a>
                     <a href="about-company.html">About Company</a>
                     </div>
                 </div>
 
-        <a href="index.html">Applying</a>
+        
             </div>
         </div>
 
