--- a/about-wiztech.html
+++ b/about-wiztech.html
@@ -4,36 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Wiztech 2025 | AI Registration Form">
+    <meta property="og:title" content="VisionAI Technologies | AI Registration Form">
     <meta property="og:description" content="WIZ-5 | A Journey to the Future of AI and Technology">
-    <meta property="og:image" content="https://dbs-nesar.github.io/AI-register-form/logo.png">
-    <meta property="og:url" content="https://dbs-nesar.github.io/AI-register-form/">
+    <meta property="og:image" content="https://dbs-nesar.github.io/AI-Web-Architects/logo.png">
+    <meta property="og:url" content="https://dbs-nesar.github.io/AI-Web-Architects/">
     <meta property="og:type" content="website">
     <title>Wiztech 2025 | AI Registration Form</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="logo.png" id = "icon">
 </head>
 <body>
-        <div id = "navbar">
+    <div id = "navbar">
         <a href = "#"><img src="logo.png" id = "logo" height="40px" ></a>
-        <h2 id = "main-head">Wiztech 2025 | AI Registration Form</h2>
+        <h2 id = "main-head">VisionAI Technologies</h2>
         <div id="menu">
             <button id="menu-btn">☰ Menu</button>
             <div id="dropdown">
                 <a href="index.html">Applying</a>
                 <div class="sub-drop">
-                <a>Dashboard ▾</a>
+                <a class="main-link" href="About.html">About ▾</a>
                     <div class="sub-options">
                     <a href="about-wiztech.html">About Wiztech</a>
                     <a href="about-company.html">About Company</a>
                     </div>
                 </div>
-
-        
             </div>
         </div>
-
-    </div>
 
     </div>
     <div id="total-spaced-form">
@@ -56,10 +52,14 @@
                     </p><br><br>
                     <p class ="footer">
                         @By Nesar Dhawan
-                    </p><br>
+                    </p>
                     <p class ="footer">
-                        Class-7 Aster
+                        Grade:7<sup>th</sup> Aster
                     </p><br>
+                    <p class="footer">@Kiyansh Bhora</p>
+                    <p class="footer">
+                        Grade:6<sup>th</sup> Bluebell
+                    </p>
                     <p class ="footer">
                         School Name:Dass and Brown World School,on border road,fzr,punj
                     </p><br>
@@ -69,6 +69,4 @@
 </body>
 
 </html>
-
-
 
