--- a/index.html
+++ b/index.html
@@ -358,10 +358,10 @@
                     </div>
                 <div id ="f-d">
                     <p class ="footer">
-                        @no copyright-This site is for educational purposes(Wiztech 2025-2026). 
+                        @No copyright-This site is for educational purposes. 
                     </p><br>
                     <p class ="footer">
-                        This site will be unpublished before 10 december 2025(after a week of competion)
+                        Nesar Innovations
                     </p><br><br>
                     <p class ="footer">
                         @By Nesar Dhawan
@@ -370,7 +370,7 @@
                         Class-7 Aster
                     </p><br>
                     <p class ="footer">
-                        School Name:Dass and Brown World School,on border road,fzr,punj
+                        School Name:Dass and Brown World School,on border road,Fzr,Punj
                     </p><br>
                 </div>
             </footer>
@@ -379,5 +379,6 @@
         </script>
 </body>
 </html>
+
 
 
