--- a/about-company.html
+++ b/about-company.html
@@ -39,34 +39,32 @@
             <p id ="dash-con">This company had a colab with Wiztech to bring innovative technology solutions to the event.Also this is not an AI company,It is showed to be an AI Company but is a website for an educational purposes(Wiztech(WIZ-5))</p>
         </div>
     </div>
-    <div id = "footer">
+<div id = "footer">
             <footer>
                 <div id ="c-d">
                     <img id = "credit" src= "logo.png">
                     </div>
                 <div id ="f-d">
                     <p class ="footer">
-                        @no copyright-This site is for educational purposes(Wiztech 2025-2026). 
+                        @No copyright-This site is for educational purposes. 
                     </p><br>
                     <p class ="footer">
-                        This site will be unpublished before 10 december 2025(after a week of competion)
+                        Nesar Innovations
                     </p><br><br>
                     <p class ="footer">
                         @By Nesar Dhawan
-                    </p>
-                    <p class ="footer">
-                        Grade:7<sup>th</sup> Aster
                     </p><br>
-                    <p class="footer">@Kiyansh Bhora</p>
-                    <p class="footer">
-                        Grade:6<sup>th</sup> Bluebell
-                    </p>
                     <p class ="footer">
-                        School Name:Dass and Brown World School,on border road,fzr,punj
+                        Class-7 Aster
+                    </p><br>
+                    <p class ="footer">
+                        School Name:Dass and Brown World School,on border road,Fzr,Punj
                     </p><br>
                 </div>
             </footer>
         </div>
 
+
 </body>
+
 </html>
